| Summary: | ASTERISK-30316: res_pjsip: Documentation should point out default if contact_user is not being set for outbound registrations | ||
| Reporter: | Marcel Wagner (chingucoding) | Labels: | |
| Date Opened: | 2022-11-17 08:32:55.000-0600 | Date Closed: | 2022-12-08 12:39:44.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Documentation |
| Versions: | 18.15.0 20.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The documentation on the contact_user (https://wiki.asterisk.org/wiki/display/AST/Asterisk+20+Configuration_res_pjsip#Asterisk20Configuration_res_pjsip-endpoint_contact_user) option and outbound registrations (https://wiki.asterisk.org/wiki/display/AST/Configuring+Outbound+Registrations ) currently does not indicate that the default value will be "s" (https://github.dev/asterisk/asterisk/blob/6baa4209864863fde333f4e81cddd879968146c7/res/res_pjsip_outbound_registration.c#L1869) if this is not being set. It would be good if this was indicated so users are not surprised by the value. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-11-17 08:32:56.171-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Marcel Wagner (chingucoding) 2022-11-17 12:00:24.492-0600 Also, if this update documentation is wanted, I would gladly create the changes for that. By: Michael Bradeen (mbradeen) 2022-11-17 12:10:59.333-0600 [~chingucoding] - if you have a patch, for any part please attach. By: Marcel Wagner (chingucoding) 2022-11-17 12:52:07.009-0600 Should I attach a patch file or would creating a gerrit change be easier? By: Joshua C. Colp (jcolp) 2022-11-17 12:54:31.230-0600 All changes have to go through Gerrit, so it is the preferred place to have changes included faster. By: Marcel Wagner (chingucoding) 2022-11-17 13:35:08.424-0600 Created changes for this here: https://gerrit.asterisk.org/c/asterisk/+/19569 By: Friendly Automation (friendly-automation) 2022-12-08 12:39:45.340-0600 Change 19684 merged by George Joseph: res_pjsip: Update contact_user to point out default [https://gerrit.asterisk.org/c/asterisk/+/19684|https://gerrit.asterisk.org/c/asterisk/+/19684] By: Friendly Automation (friendly-automation) 2022-12-08 12:39:49.226-0600 Change 19685 merged by George Joseph: res_pjsip: Update contact_user to point out default [https://gerrit.asterisk.org/c/asterisk/+/19685|https://gerrit.asterisk.org/c/asterisk/+/19685] By: Friendly Automation (friendly-automation) 2022-12-08 12:39:57.875-0600 Change 19569 merged by George Joseph: res_pjsip: Update contact_user to point out default [https://gerrit.asterisk.org/c/asterisk/+/19569|https://gerrit.asterisk.org/c/asterisk/+/19569] | ||